force-app/main/default/objects/User_Survey__c/User_Survey__c.object-meta.xml
<CustomObject>
    <label>User Survey</label>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>User Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>