force-app/main/default/objects/User_Survey__c/fields/IP__c.field-meta.xml
<CustomField>
    <fullName>IP__c</fullName>
    <label>IP</label>
    <length>15</length>
    <type>Text</type>
</CustomField>