force-app/main/default/objects/User_Survey__c/fields/IsIdentified__c.field-meta.xml
<CustomField>
    <fullName>IsIdentified__c</fullName>
    <formula>NOT( ISBLANK( Lead__r.Citizen__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsIdentified ?</label>
    <type>Checkbox</type>
</CustomField>