force-app/main/default/objects/User_Survey__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Lead.RecordTypeId</field>
            <operation>equals</operation>
            <value>PulsoCRM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Users Surveys</relationshipLabel>
    <relationshipName>Users_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>