force-app/main/default/objects/User_Survey__c/fields/Number_Of_Answered_Questions__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Answered_Questions__c</fullName>
    <label>Number_Of_Answered_Questions</label>
    <summaryForeignKey>User_Survey_Answers__c.User_Survey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>