force-app/main/default/objects/User_Survey__c/fields/Referer__c.field-meta.xml
<CustomField>
    <fullName>Referer__c</fullName>
    <label>Referer</label>
    <type>Url</type>
</CustomField>