force-app/main/default/objects/User_Survey__c/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <label>Referrer</label>
    <type>Url</type>
</CustomField>