force-app/main/default/objects/User_Survey__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <label>Survey</label>
    <referenceTo>Encuesta__c</referenceTo>
    <relationshipLabel>Users Surveys</relationshipLabel>
    <relationshipName>Users_Surveys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>